--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Mon super site</h1>
     <h2>Mon super titre</h2>
     <h3>Mon super titre 3</h3>
+    <h4>Mon super titre 4</h4>
     
 </body>
 </html>
